@@ -1111,3 +1111,4 @@ v- Fixed some bugreport stuff
 - Made the kline-address error easier to understand (must be instead of is not)
 - Made a SNOMASK for the +s notices, so you arent forced into hearing them if you just
   want say +k
+- Fixed some return values, can't gline masks with a ! in them anymore
